check cap3 in corso

--- a/latex_source/capitolo1.tex
+++ b/latex_source/capitolo1.tex
@@ -70,7 +70,7 @@ Per comprendere i meccanismi che regolano lo scambio di energia tra la radiazion
 \begin{equation}
   N=N_0e^{{-\frac{E}{kT}}}
 \end{equation}
-dove $N_0$ \'e la popolazione iniziale in un dato livello energetico e $k= 1.38 \cdot 10^{-23} J / K$ \'e la costante di Boltzmann. %% TODO controlla notazione
+dove $N_0$ \'e la popolazione iniziale in un dato livello energetico e $k= 1.38 \cdot 10^{-23} J / K$ \'e la costante di Boltzmann.
  
  Indicando, quindi, con $N_1$ e $N_2$ il numero di atomi per unit\'a di volume (popolazione atomica) per i rispettivi livelli $E_1$ e $E_2$, possiamo ricavare il rapporto tra il numero di atomi nello stato fondamentale e quello nello stato eccitato, all'equilibrio termodinamico alla temperatura $T$, tramite la seguente equazione:
 \begin{equation}
